--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'main-btn': '#FF4240',
                     }
                 }
             }
@@ -30,12 +31,45 @@
             font-family: 'Manrope', sans-serif;
         }
     </style>
-
+    <!--font awesome link-->
+    <script src="https://kit.fontawesome.com/4a753d1d29.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="manrope">
-    <header>
-     
+    <header class="container">
+     <!-- nav bar -->
+     <div class="flex justify-around bg-base-100 mt-5">
+        <div class="">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a class="text-red-600">Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-2xl font-extrabold">Hockey<span class="text-red-500">’</span>s</a>
+        </div>
+        <div class=" hidden lg:flex justify-around">
+          <ul class="menu menu-horizontal px-2">
+            <li><a class="text-red-600">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <div >
+         <ul class="flex gap-2 lg:gap-5 px-1 items-center">
+          <li><i class="fa-solid fa-magnifying-glass" style="color: #a5b3ca;"></i></li>
+          <li> <a class="btn bg-main-btn text-white">Get Ticket</a></li>
+         </ul>
+        </div>
+      </div>
     </header>
     <main>
 
