--- a/index.html
+++ b/index.html
@@ -2,60 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B9A3-Hockeys</title>
-    <!-- link to tailwind & daisy ul -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!--For custom class -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        clifford: '#da373d',
-                        'main-btn': '#FF4240',
-                    }
-                }
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B9A3-Hockeys</title>
+  <!-- link to tailwind & daisy ul -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!--For custom class -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'main-btn': '#FF4240',
+          }
         }
-    </script>
-    <!-- font manrope -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <style>
-        .manrope {
-            font-family: 'Manrope', sans-serif;
-        }
-    </style>
-    <!--font awesome link-->
-    <script src="https://kit.fontawesome.com/4a753d1d29.js" crossorigin="anonymous"></script>
+      }
+    }
+  </script>
+  <!-- font manrope -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    .manrope {
+      font-family: 'Manrope', sans-serif;
+    }
+  </style>
+  <!--font awesome link-->
+  <script src="https://kit.fontawesome.com/4a753d1d29.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="manrope">
-    <header class="container">
-     <!-- nav bar -->
-     <div class="flex justify-around bg-base-100 mt-5">
-        <div class="">
-          <div class="dropdown">
-            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-            </div>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a class="text-red-600">Home</a></li>
-              <li><a>About</a></li>
-              <li><a>Pages</a></li>
-              <li><a>Blog</a></li>
-              <li><a>Contact</a></li>
-            </ul>
+  <header class="container">
+    <!-- nav bar -->
+    <div class="flex justify-around bg-base-100 mt-5">
+      <div class="">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
           </div>
-          <a class="btn btn-ghost text-2xl font-extrabold">Hockey<span class="text-red-500">’</span>s</a>
-        </div>
-        <div class=" hidden lg:flex justify-around">
-          <ul class="menu menu-horizontal px-2">
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
             <li><a class="text-red-600">Home</a></li>
             <li><a>About</a></li>
             <li><a>Pages</a></li>
@@ -63,20 +54,63 @@
             <li><a>Contact</a></li>
           </ul>
         </div>
-        <div >
-         <ul class="flex gap-2 lg:gap-5 px-1 items-center">
-          <li><i class="fa-solid fa-magnifying-glass" style="color: #a5b3ca;"></i></li>
-          <li> <a class="btn bg-main-btn text-white">Get Ticket</a></li>
-         </ul>
-        </div>
+        <a class="btn btn-ghost text-2xl font-extrabold">Hockey<span class="text-red-500">’</span>s</a>
       </div>
-    </header>
-    <main>
+      <div class=" hidden lg:flex justify-around">
+        <ul class="menu menu-horizontal px-2">
+          <li><a class="text-red-600">Home</a></li>
+          <li><a>About</a></li>
+          <li><a>Pages</a></li>
+          <li><a>Blog</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <ul class="flex gap-2 lg:gap-5 px-1 items-center">
+          <li><i class="fa-solid fa-magnifying-glass" style="color: #a5b3ca;"></i></li>
+          <li> <a class="btn bg-main-btn text-white border-none">Get Ticket</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- banner -->
+    <section>
+      <div class="carousel mt-10 mx-2 lg:mx-24 rounded-md">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="Images/1.png" class="w-full" />
+          <div class="absolute flex gap-2 justify-between transform -translate-y-1/2 bottom-4 left-4">
+            <a href="#slide3" class="btn btn-circle bg-black text-white">❮</a>
+            <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="Images/2.png" class="w-full" />
+          <div class="absolute flex gap-2 justify-between transform -translate-y-1/2 bottom-4 left-4">
+            <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
+            <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="Images/3.png" class="w-full" />
+          <div class="absolute flex gap-2 justify-between transform -translate-y-1/2 bottom-4 left-4">
+            <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❮</a>
+            <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❯</a>
+          </div>
+        </div>
+    </section>
+    <!-- badge -->
+    <div class="lg:-translate-y-48 lg:translate-x-2/3 lg:mr-28 mx-2">
+    <div class="bg-black text-gray-100 p-5  rounded-xl lg:w-96">
+      <h2 class="text-xl font-extrabold">Meet all the heroes from the field</h2>
+      <p class="text-gray-400 text-sm mt-2 ">We have trained countless athletes who have played in the olympic . Join our program to meet them personally in the field . </p>
+    </div>
+  </div>
+  </header>
+  <main>
 
-    </main>
-    <footer>
+  </main>
+  <footer>
 
-    </footer>
+  </footer>
 </body>
 
 </html>
