--- a/index.html
+++ b/index.html
@@ -98,15 +98,58 @@
         </div>
     </section>
     <!-- badge -->
-    <div class="lg:-translate-y-48 lg:translate-x-2/3 lg:mr-28 mx-2">
+    <div class="lg:-translate-y-48 flex justify-end mx-2 lg:mr-28">
     <div class="bg-black text-gray-100 p-5  rounded-xl lg:w-96">
       <h2 class="text-xl font-extrabold">Meet all the heroes from the field</h2>
       <p class="text-gray-400 text-sm mt-2 ">We have trained countless athletes who have played in the olympic . Join our program to meet them personally in the field . </p>
     </div>
   </div>
+  <hr>
   </header>
   <main>
-
+<!-- Professional Hockeys Club -->
+<section>
+  <div class="text-center my-4">
+    <h1 class="text-4xl font-extrabold">Professional Hockeys Club</h1>
+    <p class="text-gray-500 my-4 lg:my-8">There are a variety of things that our club has. Some of them are mentioned below </p>
+    <hr>
+    <!-- Container -->
+    <div class="flex gap-4 flex-col sm:flex-row justify-center my-4">
+      <!-- radial-progress 1 -->
+      <div class="text-center mx-4 lg:w-56">
+        <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-black font-semibold">87%</span></div>
+      <h1 class="font-bold my-4">Prayer Facility</h1>
+       <p class="text-sm text-gray-500 "> 
+        Our club has a mosque and a place to do ablution in most places So that you don't have to worry about prayer </p>
+      </div>
+      <!-- radial-progress 2 -->
+      <div class="text-center mx-4 lg:w-56 ">
+        <div class="radial-progress text-[#49D293] " style="--value:95;" role="progressbar"><span class="text-black font-semibold">95%</span></div>
+      <h1 class="font-bold my-4">Experienced Coach</h1>
+       <p class="text-sm text-gray-500"> 95%
+        Our coaches have more then 5 years of experience of training students
+       </p>
+      </div>
+      <!-- radial-progress 3 -->
+      <div class="text-center mx-4 lg:w-56">
+        <div class="radial-progress text-[#FFB546] " style="--value:90;" role="progressbar"><span class="text-black font-semibold">90%</span></div>
+      <h1 class="font-bold my-4">Senior Player</h1>
+       <p class="text-sm text-gray-500">  
+        Our senior players are quite qualified . 
+        you can get more information about them in the wikipedia
+ </p>
+      </div>
+      <!-- radial-progress 4 -->
+      <div class="text-center mx-4 lg:w-56">
+        <div class="radial-progress text-[#4C8DF1] " style="--value:80;" role="progressbar"><span class="text-black font-semibold">80%</span></div>
+      <h1 class="font-bold my-4">Training Ground</h1>
+       <p class="text-sm text-gray-500"> 
+        80% of our campass is for training therefore our training ground is very large 
+</p>
+      </div>
+    </div>
+  </div>
+</section>
   </main>
   <footer>
 
