added program section

--- a/index.html
+++ b/index.html
@@ -99,57 +99,112 @@
     </section>
     <!-- badge -->
     <div class="lg:-translate-y-48 flex justify-end mx-2 lg:mr-28">
-    <div class="bg-black text-gray-100 p-5  rounded-xl lg:w-96">
-      <h2 class="text-xl font-extrabold">Meet all the heroes from the field</h2>
-      <p class="text-gray-400 text-sm mt-2 ">We have trained countless athletes who have played in the olympic . Join our program to meet them personally in the field . </p>
+      <div class="bg-black text-gray-100 p-5  rounded-xl lg:w-96">
+        <h2 class="text-xl font-extrabold">Meet all the heroes from the field</h2>
+        <p class="text-gray-400 text-sm mt-2 ">We have trained countless athletes who have played in the olympic . Join
+          our program to meet them personally in the field . </p>
+      </div>
     </div>
-  </div>
-  <hr>
   </header>
   <main>
-<!-- Professional Hockeys Club -->
-<section>
-  <div class="text-center my-4">
-    <h1 class="text-4xl font-extrabold">Professional Hockeys Club</h1>
-    <p class="text-gray-500 my-4 lg:my-8">There are a variety of things that our club has. Some of them are mentioned below </p>
-    <hr>
-    <!-- Container -->
-    <div class="flex gap-4 flex-col sm:flex-row justify-center my-4">
-      <!-- radial-progress 1 -->
-      <div class="text-center mx-4 lg:w-56">
-        <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-black font-semibold">87%</span></div>
-      <h1 class="font-bold my-4">Prayer Facility</h1>
-       <p class="text-sm text-gray-500 "> 
-        Our club has a mosque and a place to do ablution in most places So that you don't have to worry about prayer </p>
+    <!-- Professional Hockeys Club -->
+    <section>
+      <div class="text-center my-4">
+        <h1 class="text-4xl font-extrabold">Professional Hockeys Club</h1>
+        <p class="text-gray-500 my-4 lg:my-8">There are a variety of things that our club has. Some of them are
+          mentioned below </p>
+        <!-- Container -->
+        <div class="flex gap-4 flex-col sm:flex-row justify-center my-4">
+          <!-- radial-progress 1 -->
+          <div class="text-center mx-4 lg:w-56">
+            <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span
+                class="text-black font-semibold">87%</span></div>
+            <h1 class="font-bold my-4">Prayer Facility</h1>
+            <p class="text-sm text-gray-500 ">
+              Our club has a mosque and a place to do ablution in most places So that you don't have to worry about
+              prayer </p>
+          </div>
+          <!-- radial-progress 2 -->
+          <div class="text-center mx-4 lg:w-56 ">
+            <div class="radial-progress text-[#49D293] " style="--value:95;" role="progressbar"><span
+                class="text-black font-semibold">95%</span></div>
+            <h1 class="font-bold my-4">Experienced Coach</h1>
+            <p class="text-sm text-gray-500"> 95%
+              Our coaches have more then 5 years of experience of training students
+            </p>
+          </div>
+          <!-- radial-progress 3 -->
+          <div class="text-center mx-4 lg:w-56">
+            <div class="radial-progress text-[#FFB546] " style="--value:90;" role="progressbar"><span
+                class="text-black font-semibold">90%</span></div>
+            <h1 class="font-bold my-4">Senior Player</h1>
+            <p class="text-sm text-gray-500">
+              Our senior players are quite qualified .
+              you can get more information about them in the wikipedia
+            </p>
+          </div>
+          <!-- radial-progress 4 -->
+          <div class="text-center mx-4 lg:w-56">
+            <div class="radial-progress text-[#4C8DF1] " style="--value:80;" role="progressbar"><span
+                class="text-black font-semibold">80%</span></div>
+            <h1 class="font-bold my-4">Training Ground</h1>
+            <p class="text-sm text-gray-500">
+              80% of our campass is for training therefore our training ground is very large
+            </p>
+          </div>
+        </div>
       </div>
-      <!-- radial-progress 2 -->
-      <div class="text-center mx-4 lg:w-56 ">
-        <div class="radial-progress text-[#49D293] " style="--value:95;" role="progressbar"><span class="text-black font-semibold">95%</span></div>
-      <h1 class="font-bold my-4">Experienced Coach</h1>
-       <p class="text-sm text-gray-500"> 95%
-        Our coaches have more then 5 years of experience of training students
-       </p>
+    </section>
+    <!-- Program Sections -->
+    <section>
+      <div class="text-center mt-32 mb-10">
+        <h1 class="text-4xl font-extrabold">Program Sections</h1>
+        <p class="text-gray-500 my-4 lg:my-8">Here are some programs we provide . Consider registering</p>
       </div>
-      <!-- radial-progress 3 -->
-      <div class="text-center mx-4 lg:w-56">
-        <div class="radial-progress text-[#FFB546] " style="--value:90;" role="progressbar"><span class="text-black font-semibold">90%</span></div>
-      <h1 class="font-bold my-4">Senior Player</h1>
-       <p class="text-sm text-gray-500">  
-        Our senior players are quite qualified . 
-        you can get more information about them in the wikipedia
- </p>
+      <!-- Container  -->
+      <div>
+        <!-- row 1 -->
+        <div class="flex gap-4 flex-col lg:flex-row mx-4 lg:mx-20">
+          <div class="flex-1">
+            <div class=" hero min-h-[338px] rounded-xl" style="background-image:linear-gradient(transparent,black), url(images/2.png);">
+              <div class="hero-content text-white mt-28">
+                <div>
+                  <h1 class="mb-5 text-2xl font-bold">Junior Program</h1>
+                  <p class="mb-5 text-gray-200">Our junior program teaches you all the basics that you need to know about Hockey</p>
+                  <button class="btn bg-main-btn text-white border-none">Register Now!</button>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex-1">
+            <div class=" hero min-h-[338px] rounded-xl" style="background-image:linear-gradient(transparent,black),url(images/3.png) ;">
+              <div class="hero-content text-white mt-28">
+                <div>
+                  <h1 class="mb-5 text-2xl font-bold">Teenager Program</h1>
+                  <p class="mb-5 text-gray-200">Our teenager program teaches you all the basics of Hockey along with advance things about Hockey</p>
+                  <button class="btn bg-main-btn text-white border-none">Register Now!</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- row-2 -->
+        <div class=" mx-4 lg:mx-20 mt-4">
+          <div class=" rounded-xl bg-no-repeat w-full" style="background-image:linear-gradient(transparent,black),url(images/4.png);">
+            <div class=" text-white ">
+              <div class="p-4 pt-44 lg:w-1/2">
+                <h1 class="mb-5 text-2xl font-bold ">Professional Program</h1>
+                <p class="mb-5">Our professional program teaches you advance things along with the things that only professional Hockey players know .</p>
+                  <button class="btn bg-main-btn text-white border-none">Register Now!</button>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <!-- radial-progress 4 -->
-      <div class="text-center mx-4 lg:w-56">
-        <div class="radial-progress text-[#4C8DF1] " style="--value:80;" role="progressbar"><span class="text-black font-semibold">80%</span></div>
-      <h1 class="font-bold my-4">Training Ground</h1>
-       <p class="text-sm text-gray-500"> 
-        80% of our campass is for training therefore our training ground is very large 
-</p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
   </main>
   <footer>
 
