added product section

--- a/index.html
+++ b/index.html
@@ -166,11 +166,13 @@
         <!-- row 1 -->
         <div class="flex gap-4 flex-col lg:flex-row mx-4 lg:mx-20">
           <div class="flex-1">
-            <div class=" hero min-h-[338px] rounded-xl" style="background-image:linear-gradient(transparent,black), url(images/2.png);">
+            <div class=" hero min-h-[338px] rounded-xl"
+              style="background-image:linear-gradient(transparent,black), url(images/2.png);">
               <div class="hero-content text-white mt-28">
                 <div>
                   <h1 class="mb-5 text-2xl font-bold">Junior Program</h1>
-                  <p class="mb-5 text-gray-200">Our junior program teaches you all the basics that you need to know about Hockey</p>
+                  <p class="mb-5 text-gray-200">Our junior program teaches you all the basics that you need to know
+                    about Hockey</p>
                   <button class="btn bg-main-btn text-white border-none">Register Now!</button>
 
                 </div>
@@ -178,11 +180,13 @@
             </div>
           </div>
           <div class="flex-1">
-            <div class=" hero min-h-[338px] rounded-xl" style="background-image:linear-gradient(transparent,black),url(images/3.png) ;">
+            <div class=" hero min-h-[338px] rounded-xl"
+              style="background-image:linear-gradient(transparent,black),url(images/3.png) ;">
               <div class="hero-content text-white mt-28">
                 <div>
                   <h1 class="mb-5 text-2xl font-bold">Teenager Program</h1>
-                  <p class="mb-5 text-gray-200">Our teenager program teaches you all the basics of Hockey along with advance things about Hockey</p>
+                  <p class="mb-5 text-gray-200">Our teenager program teaches you all the basics of Hockey along with
+                    advance things about Hockey</p>
                   <button class="btn bg-main-btn text-white border-none">Register Now!</button>
                 </div>
               </div>
@@ -191,18 +195,133 @@
         </div>
         <!-- row-2 -->
         <div class=" mx-4 lg:mx-20 mt-4">
-          <div class=" rounded-xl bg-no-repeat w-full" style="background-image:linear-gradient(transparent,black),url(images/4.png);">
+          <div class=" rounded-xl bg-no-repeat w-full"
+            style="background-image:linear-gradient(transparent,black),url(images/4.png);">
             <div class=" text-white ">
               <div class="p-4 pt-44 lg:w-1/2">
                 <h1 class="mb-5 text-2xl font-bold ">Professional Program</h1>
-                <p class="mb-5">Our professional program teaches you advance things along with the things that only professional Hockey players know .</p>
-                  <button class="btn bg-main-btn text-white border-none">Register Now!</button>
+                <p class="mb-5">Our professional program teaches you advance things along with the things that only
+                  professional Hockey players know .</p>
+                <button class="btn bg-main-btn text-white border-none">Register Now!</button>
 
               </div>
             </div>
           </div>
         </div>
 
+      </div>
+    </section>
+    <!-- product section -->
+    <section>
+      <div class="text-center mt-32 mb-10">
+        <h1 class="text-4xl font-extrabold">Our New Products</h1>
+        <p class="text-gray-500 my-4 lg:my-8">Some of our new merchandise . Buy them to show your support for this club
+        </p>
+      </div>
+      <!-- container -->
+      <div class="grid gap-4 grid-cols-1 lg:grid-cols-2 mx-2 lg:mx-20">
+        <!-- card-1 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-4" src="Images/5.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">Jacket</h2>
+            <p class="card-title text-sm text-gray-500">The best jacket you witt ever find . <br> guaranteed to last more then a year</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
+        <!-- card 2 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-3" src="Images/6.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">Badge with our team logo </h2>
+            <p class="card-title text-sm text-gray-500">Wear this to let everyone know that <br>you support us</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-3" src="Images/7.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">Cap For Hockeys</h2>
+            <p class="card-title text-sm text-gray-500">To shade you from the sun.</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
+        <!-- card 4 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-3" src="Images/8.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">jersey</h2>
+            <p class="card-title text-sm text-gray-500">Wear this to let everyone know that <br>you support us</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
+        <!-- card 5 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-3" src="Images/9.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">Halmet </h2>
+            <p class="card-title text-sm text-gray-500">For Safety.</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
+        <!-- card-6 -->
+        <div class="card lg:card-side bg-base-100 border-2 lg:w-[550px]">
+          <figure><img class="m-3" src="Images/10.png" alt="Album" /></figure>
+          <div class="card-body ">
+            <div class="flex gap-5">
+              <h6><i class="fa-solid fa-star" style="color: #ffc13b;"></i> 5.0</h6>
+              <h6><i class="fa-solid fa-eye" style="color: #b0c0db;"></i> 20</h6>
+              <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
+            </div>
+            <h2 class="card-title">Football</h2>
+            <p class="card-title text-sm text-gray-500">To help you practice.</p>
+            <div class="card-title text-sm font-extrabold flex">
+              <h6 class="text-red-600">Price - $22.00</h6>
+              <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
