--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
               <h6><i class="fa-regular fa-heart" style="color: #b0c0db;"></i> 200</h6>
             </div>
             <h2 class="card-title">Jacket</h2>
-            <p class="card-title text-sm text-gray-500">The best jacket you witt ever find . <br> guaranteed to last more then a year</p>
+            <p class="card-title text-sm text-gray-500">The best jacket you witt ever find . <br> guaranteed to last
+              more then a year</p>
             <div class="card-title text-sm font-extrabold flex">
               <h6 class="text-red-600">Price - $22.00</h6>
               <h6 class="text-[#b0c0db]"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</h6>
@@ -323,6 +324,93 @@
           </div>
         </div>
       </div>
+    </section>
+    <!-- FAQ -->
+    <section>
+      <div class="text-center mt-32 mb-10">
+        <h1 class="text-4xl font-extrabold">Clients Question</h1>
+        <p class="text-gray-500 my-4 lg:my-8">Answers to the most popular questions are given below .
+        </p>
+      </div>
+      <div class="my-20 mx-2 lg:mx-20 p-10 border-2 rounded-xl">
+        <div class="flex gap-4 flex-col lg:flex-row">
+          <!-- img -->
+          <div class="flex-1">
+            <img src="Images/11.png" alt="">
+          </div>
+          <!-- Q/A -->
+          <div class="flex-1">
+            <!-- 1 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p>There are very high quality . And are maintained properly . You don't need to pay additional money to
+                  use them</p>
+              </div>
+            </div>
+            <!-- 2 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Hockey Training
+              </div>
+              <div class="collapse-content">
+                <p>start's from 8am and end's in 3pm</p>
+              </div>
+            </div>
+            <!-- 3 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Private Lessons
+              </div>
+              <div class="collapse-content">
+                <p>start's from 4pm and end's in 8pm</p>
+              </div>
+            </div>
+            <!-- 4 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Ski Touring
+              </div>
+              <div class="collapse-content">
+                <p>open</p>
+              </div>
+            </div>
+            <!-- 5 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Booking
+              </div>
+              <div class="collapse-content">
+                <p>from 1st january to 10th february</p>
+              </div>
+            </div>
+            <!-- 6 -->
+            <div class="collapse collapse-plus border-b-2 rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-extrabold">
+                Pricing
+              </div>
+              <div class="collapse-content">
+                <p>Junior Program 2,000$
+                  <br>
+                  Teenager Program 8,000$
+                  <br>
+                  Professional Program 30,000$
+                  <br>
+                  Private lessons 10,000$ per lessons
+                </p>
+              </div>
+            </div>
+
+          </div>
+        </div>
     </section>
   </main>
   <footer>
