added get in touch section

--- a/index.html
+++ b/index.html
@@ -408,9 +408,78 @@
                 </p>
               </div>
             </div>
-
           </div>
         </div>
+    </section>
+    <!-- Get In Touch -->
+    <section>
+      <div class="text-center mt-32 mb-10">
+        <h1 class="text-4xl font-extrabold">Get In Touch</h1>
+        <p class="text-gray-500 my-4 lg:my-8">If you face any problems please don't hesitate to get in Touch.
+        </p>
+      </div>
+      <!-- container -->
+      <div class="grid gap-4 grid-cols-1 lg:grid-cols-3 mt-32 mx-2 lg:ml-40">
+        <!-- card container -->
+        <div class="border-2 rounded-xl p-4 ">
+          <!-- card-1 -->
+          <div class="bg-green-50 rounded-md p-4 mb-2">
+            <img src="Images/Group 1171275317.png" alt="">
+            <p class="text-sm text-gray-500 mt-4 text-left">Phone Number :</p>
+            <h6 class="text-lg font-extrabold text-left">(+62) 123-321-543</h6>
+          </div>
+          <!-- card-2 -->
+          <div class="bg-red-50 rounded-md p-4 mb-2">
+            <img src="Images/Group 1171275318.png" alt="">
+            <p class="text-sm text-gray-500 mt-4 text-left">Email:</p>
+            <h6 class="text-lg font-extrabold text-left"> hockeys@support.com</h6>
+          </div>
+          <!-- card-3 -->
+          <div class="bg-blue-50 rounded-md p-4 mb-2">
+            <img src="Images/Group 1171275321.png" alt="">
+            <p class="text-sm text-gray-500 mt-4 text-left">Location :</p>
+            <h6 class="text-lg font-extrabold text-left">152/1 Mohakhali Wireless Gate</h6>
+          </div>
+        </div>
+        <!-- form -->
+        <div class="col-span-2">
+          <div class="grid grid-cols-1 lg:grid-cols-2 lg:w-2/3">
+            <div>
+              <p class="m-2 font-extrabold">Your Name</p>
+              <input class="bg-slate-100 p-2 m-2 rounded-lg w-[336px] lg:w-[230px]" type="text">
+            </div>
+            <div>
+              <p class="m-2 font-extrabold">Your Email</p>
+              <input class="bg-slate-100 p-2 m-2 rounded-lg w-[336px] lg:w-[230px]" type="text">
+            </div>
+            <div>
+              <p class="m-2 font-extrabold">Subject</p>
+              <input class="bg-slate-100 p-2 m-2 rounded-lg w-[336px] lg:w-[230px]" type="text">
+            </div>
+            <div>
+              <p class="m-2 font-extrabold">Phone Number</p>
+              <input class="bg-slate-100 p-2 m-2 rounded-lg w-[336px] lg:w-[230px]" type="text">
+            </div>
+          </div>
+          <div class="col-span-2 mt-4 ml-2">
+            <p class="m-2 font-extrabold">Message</p>
+            <textarea class="bg-slate-100 textarea h-[160px] w-[336px] lg:w-[470px]"></textarea>
+          </div>
+          <div class="col-span-2 mt-4 ml-2">
+            <button class="btn bg-main-btn text-white w-[336px] lg:w-[470px]">Send Message</button>
+          </div>
+    </section>
+    <!-- social media -->
+    <section class="bg-slate-100 rounded-md p-5 text-center mt-4 mx-4 lg:ml-40 lg:mr-64">
+      <p class="font-extrabold">Social Media</p>
+      <div class="flex gap-4 justify-center mt-3">
+
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+
+      </div>
     </section>
   </main>
   <footer>
