--- a/index.html
+++ b/index.html
@@ -470,20 +470,59 @@
           </div>
     </section>
     <!-- social media -->
-    <section class="bg-slate-100 rounded-md p-5 text-center mt-4 mx-4 lg:ml-40 lg:mr-64">
+    <section class="bg-slate-100 rounded-md p-5 text-center mt-4 mb-20 mx-4 lg:ml-40 lg:mr-64">
       <p class="font-extrabold">Social Media</p>
       <div class="flex gap-4 justify-center mt-3">
-
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-github"></i>
-
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer p-10 bg-gray-950 text-gray-100 ">
+    <aside>
+      <h2 class="text-2xl font-extrabold">Get In Touch</h2>
+      <p class="text-gray-400">If there is is any problems <br>
+        or questions that you may have <br>
+        don't hesitate to get in touch <br>
+        our email and phone number are <br>
+        given below</p>
+      <p class="text-gray-400"><i class="fa-regular fa-envelope" style="color: #ff0000;"></i> hockeys@support.com</p>
+      <p class="text-gray-400"><i class="fa-solid fa-phone" style="color: #ff0000;"></i>(+62) 123-321-543</p>
+    </aside>
+    <div class="grid gap-4 lg:gap-32 grid-cols-2 lg:grid-cols-3">
+      <nav>
+        <header class="">Company</header>
+        <ul class="flex flex-col mt-4 text-gray-400">
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Leadership</a>
+          <a class="link link-hover">Careers</a>
+          <a class="link link-hover">News & Article</a>
+          <a class="link link-hover">Legal Notice</a>
+        </ul>
+      </nav>
+      <nav>
+        <header class="">Support</header>
+        <ul class="flex flex-col mt-4 text-gray-400">
+          <a class="link link-hover">Help Center</a>
+          <a class="link link-hover">FAQ</a>
+          <a class="link link-hover">Ticket Support</a>
+          <a class="link link-hover">Contact Us</a>
+        </ul>
+      </nav>
+      <nav>
+        <header class="">Services</header>
+        <ul class="flex flex-col mt-4 text-gray-400">
+          <a class="link link-hover">Academy</a>
+          <a class="link link-hover">Group Lesson</a>
+          <a class="link link-hover">Private Lesson</a>
+          <a class="link link-hover">Hockeys for kids</a>
+          <a class="link link-hover">Hockeys for adults</a>
+        </ul>
+      </nav>
 
+    </div>
   </footer>
 </body>
 
